test(usuarios): use DataFaker in service fixtures